@@ -13,10 +13,17 @@ BUG FIXES
 
     o	the man page (doc/R.1) wasn't updated with the proper VERSION.
 
-    o	new function validSlotNames().
+    o	new function validSlotNames() in package methods.
 
     o	smooth.spline() had a "df = 5" default which was never used and
 	hence extraneous and misleading.
+
+    o	read.fwf() was interpreting comment chars in its call to scan: 
+	replaced by a call to readlines(). (PR#1297/8)
+
+    o	The default has been changed to scan(comment.char="") for
+	consistency with earlier code (as in the previous item).
+
 
 
 		CHANGES IN R VERSION 1.4.1
